Add some error enums and a simple init function to set all the values of the simulator struct to 0

--- a/cerberus_c/inertial_simulator/CMakeLists.txt
+++ b/cerberus_c/inertial_simulator/CMakeLists.txt
@@ -1,2 +1,5 @@
 project(inertial_simulator)
 
+add_library(${PROJECT_NAME}
+    src/inertial_simulator.c)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
