--- a/cerberus_c/apps/inertial_demo_ecef/CMakeLists.txt
+++ b/cerberus_c/apps/inertial_demo_ecef/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_executable(inertial_demo_ecef inertial_demo_ecef.c)
+project(inertial_demo_ecef)
+add_executable(${PROJECT_NAME} inertial_demo_ecef.c)
+target_link_libraries(${PROJECT_NAME} inertial_simulator)
