Add parsing of motion profile file

--- a/cerberus_c/inertial_simulator/CMakeLists.txt
+++ b/cerberus_c/inertial_simulator/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(inertial_simulator)
 
 add_library(${PROJECT_NAME}
-    src/inertial_simulator.c)
+    src/inertial_simulator.c
+    src/motion_profile.c)
 target_include_directories(${PROJECT_NAME} PUBLIC include)
